tests/type_errors/simple_binary_op.nos
# expect_error: type mismatch
# Test that simple binary operator type mismatch is caught

main() = 5 + "hello"
